# apertus_chat

./: .gitignore  LICENSE  README.md  conversation_demo.py  examples.ipynb  pyproject.toml
apertus/: __init__.py  client.py  errors.py  http.py  types.py
tests/: test_basic.py  test_integration.py
